--- a/gatsby-example-site/src/layouts/custom.css
+++ b/gatsby-example-site/src/layouts/custom.css
@@ -1,4 +1,11 @@
 h1 {
+   color: red;
+   text-align: center;
+}
 
-    color: red;
+.nav {
+    color: white;
+    display: inline;
+    text-decoration: none;
+    font-size: 2.2rem;
 }
