--- a/gatsby-example-site/src/layouts/custom.css
+++ b/gatsby-example-site/src/layouts/custom.css
@@ -7,5 +7,6 @@ h1 {
     color: white;
     display: inline;
     text-decoration: none;
-    font-size: 2.2rem;
+    font-size: 1.5rem;
+    padding: 10px;
 }
